Changed patient flow for code verification and personal number
